--- a/ghostlink-frontend/nginx.conf
+++ b/ghostlink-frontend/nginx.conf
@@ -110,11 +110,12 @@ http {
 
         # SPA fallback
         location / {
-            limit_req zone=static burst=20 nodelay;
-            try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
+            proxy_pass http://ghostlink-frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
         }
 
         # Block access to sensitive files
@@ -138,4 +139,3 @@ http {
         }
     }
 }
-
